--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "express": "^4.18.2",
         "knex": "^2.5.0",
         "mongoose": "^7.3.4",
+        "morgan": "^1.10.0",
         "mysql": "^2.18.1",
         "mysql2": "^3.5.1",
         "nodemon": "^3.0.1",
