--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
         "@fortawesome/fontawesome-svg-core": "^6.4.0",
         "@fortawesome/free-regular-svg-icons": "^6.4.0",
         "@fortawesome/free-solid-svg-icons": "^6.4.0",
+        "@react-navigation/native": "^6.1.7",
+        "@react-navigation/native-stack": "^6.9.13",
         "axios": "^1.4.0",
         "better-sqlite3": "^8.4.0",
         "dotenv": "^16.3.1",
